[project]
name = "3d-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "depth-pro",
    "huggingface-hub>=0.24",
    "numpy>=1.24",
    "pillow>=10.0",
    "torch>=2.1",
    "torchvision>=0.16",
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro.git" }
